k8s/deployment.yml
 # Deployment for backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: todo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: backend-container
          image: sumeruc/backend:latest
          ports:
            - containerPort: 3001

          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"

          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 10

          volumeMounts:
            - name: config-volume
              mountPath: /app/config

      volumes:
        - name: config-volume
          configMap:
            name: app-config
